Word wrap fix

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,8 @@ body {
 #answer-holder {
  position: absolute;
  width: 100%;
- margin-top: -60px;
+ word-wrap: break-word;
+ bottom: 115%;
 }
 
 .answer {
